Fixed cite to add ~

--- a/design/blocksize.tex
+++ b/design/blocksize.tex
@@ -3,7 +3,7 @@ The size of a block is important as it determines how fast the total size of a c
 and the utilization of the bandwidth of network to transfer blocks.
 The size is dependend on the size of the parts of the blocks
 and can be determined by the choice of cryptographic primitives.
-Hashing function turn a variable message string to a fixed size message digest\cite{VanderLubbe-crypto}.
+Hashing function turn a variable message string to a fixed size message digest~\cite{VanderLubbe-crypto}.
 The fixed size is dependend on the choice of hashing function.
 Similair cryptographic signing functions deterimine the size of a signature.
 An overview of the size of the parts of a block can be seen in Table: \ref{table:block_size}.
