--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -1,7 +1,7 @@
 \subsection{Exchanging signatures}
 Two peers in a network will create their blocks together without having to rely on a third party.
 Between the peers one is uploading to the other.
-The uploader is traditionally called the seeder in BitTorrent and the receiver of this data the downloader\cite{Cohen-bittorrent}.
+The uploader is traditionally called the seeder in BitTorrent and the receiver of this data the downloader~\cite{Cohen-bittorrent}.
 The seeder will initiate the block creation.\,
 co the seeder can decide how altruistic it wants to be towards the downloader regarding its collaboration.
 We will explain how the block creation protocol works.
