--- a/design/signatures.tex
+++ b/design/signatures.tex
@@ -3,7 +3,7 @@
 The blocks have to be cryptographically protected and validated.
 Tampering with the contents of blocks should be detectable and useless.
 In part this is already done by using the hashes as pointers in subsequent blocks.
-If a block in a chain is changed, then the subsequent hash pointers will become invalid\cite{VanderLubbe-crypto}.
+If a block in a chain is changed, then the subsequent hash pointers will become invalid~\cite{VanderLubbe-crypto}.
 The chain becomes detached.
 
 A second issue is that peers should not be able to deny conducting a transaction.
@@ -23,7 +23,7 @@ The parts of what is signed by peer A and what is signed by B can be seen in Fig
 	\label{fig:signatures}
 \end{figure}
 
-Digital signatures have the property to be non-repudiable of origin\cite{VanderLubbe-crypto}.
+Digital signatures have the property to be non-repudiable of origin~\cite{VanderLubbe-crypto}.
 After signing a block the signer cannot later deny providing his signature.
 Only with the possesion of a secret key,
 a signature can be made;
