--- a/design/synchronizationproblem.tex
+++ b/design/synchronizationproblem.tex
@@ -24,10 +24,10 @@ We will explain three possible design solutions to this problem.
 A fair exchange signature scheme (FESS) allows two players to exchange digital signatures in a fair way.
 Fair constitutes that no player can take advantage of the other.
 Either both players receive each others signature or no player receives the other's signature.
-It is infeasible for a node to acquire a signature without giving up their own signature.\cite{asokan-fairexchange},
+It is infeasible for a node to acquire a signature without giving up their own signature~\cite{asokan-fairexchange},
 a FESS could be implement for the fair creation of the block.
 
-But currently all known FESSs use a trusted third party (TTP) at some point\cite{asokan-fairexchange}.
+But currently all known FESSs use a trusted third party (TTP) at some point~\cite{asokan-fairexchange}.
 Some schemes exist that are optimistic and will only need a TTP to resolve conflicts.
 But any TTP will not adhere to the Tribler philosophy
 of being a truly fully distributed peer-to-peer system.
