--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -27,7 +27,7 @@ and therefore only have one inbound and one outbound arrow.
 Some experiments were also run multiple times because Dispersy does not always connect to every peer.
 At the start of the experiment the peers are forced to be introduced,
 but this does not always succeed.
-This is a problem in discoverability and has been experienced by previous work aswell\cite{ruigrok-anonymous}.
+This is a problem in discoverability and has been experienced by previous work aswell~\cite{ruigrok-anonymous}.
 The final version is chosen when Dispersy did connect all the peers.
 We recommend that Dispersy is changed to allow a modified behaviour when experimenting
 where the pool of candidates is not refreshed,
