--- a/experimentation/speeds/speeds-experiment.tex
+++ b/experimentation/speeds/speeds-experiment.tex
@@ -3,7 +3,7 @@ In this experiment we measure if MultiChain can correctly track the upload and d
 between two peers with different speeds.
 In the scenario a file of 100 MB is downloaded at different speeds,
 respectively 500 KB/s, 750 KB/s, 1000 KB/s, 1250 KB/s, 2000 KB/s, and 3000 KB/s.
-The maximum speed of anonymous download was measured in experiments to be 1150 KB/s\cite{ruigrok-anonymous}.
+The maximum speed of anonymous download was measured in experiments to be 1150 KB/s~\cite{ruigrok-anonymous}.
 The scheduler waits for 1MB uploaded to another peer before scheduling a block.
 The upload and download of the file is done by different pairs of seeders and leechers.
 Every second these amounts are indicated to have been transferred to the schedulers of every peer.
