--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -6,7 +6,7 @@ The enforcement of these types of tests is a policy recently introduced within T
 \subsection{Unit Tests \& Integration tests}
 Tribler uses Python unit tests to validate small components of code.
 The tests can be run locally and
-are automatically run on a Jenkins build server\cite{jenkins}\cite{jenkins-tribler}.
+are automatically run on a Jenkins build server~\cite{jenkins,jenkins-tribler}.
 Unit tests were added to increase stability of MultiChain.
 Integration tests were added to test multiple components of MultiChains working integrated together.
 
@@ -17,7 +17,7 @@ The separate unit tests for the conversion, payload and database were the first 
 Also Dispersy was expanded to introduce new functionality to make it easier to create unit tests for communities in the future.
 An overview of the coverage can be seen in Table \ref{tab:tests}
 In the end a high level of testing has been achieved, especially in comparison to the rest of Tribler.
-The total test coverage of Tribler was only 16\% at time of writing\cite{jenkins-tribler}.
+The total test coverage of Tribler was only 16\% at time of writing~\cite{jenkins-tribler}.
 A decision using code coverage tools was made that the untested code has little value to further test in comparison to the work required.
 The code was tested in Gumby scenarios.
 
