--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -1,8 +1,8 @@
 \section{The Sybil attack}
 
-In this section we will explain the Sybil attack\cite{douceur-sybil}
+In this section we will explain the Sybil attack~\cite{douceur-sybil}
 and how it can be used in the MultiChain system to create an artificial reputation.
-A universallly applicable solution has not yet be found\cite{levine-sybilsurvey}.
+A universallly applicable solution has not yet be found~\cite{levine-sybilsurvey}.
 
 \subsection{Using fake indentities}
 In large distributed systems convincingly distinct identities can be presented
@@ -84,8 +84,8 @@ if it has an other way outside the system of asserting that it indeed is a disti
 Approaches exists that implicitly rely on the authority of a trusted agency.
 But a central authority goes against the principles of a peer-to-peer network.
 
-Several other defenses against the Sybil Attack have been proposed\cite{newsome-sybil}\cite{dinger-sybil}
-or variants on the defenses stated here\cite{levine-sybilsurvey}.
+Several other defenses against the Sybil Attack have been proposed~\cite{newsome-sybil,dinger-sybil}
+or variants on the defenses stated here~\cite{levine-sybilsurvey}.
 But these either have the same limitation and are minor improvements or are non-applicable for MultiChain.
 
 For M to conduct the Sybil Attack he will need to generate a set of key pairs.
