--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,6 +1,6 @@
 \chapter{Related work}
 In 2007, the notion of bandwidth as a currency was introduced.
-In 2009, the first Bitcoins were mined\cite{Blockchain.info-bcs}.
+In 2009, the first Bitcoins were mined~\cite{Blockchain.info-bcs}.
 These events can be seen as the first steps in reputation or currency systems.
 Currencies have more strict rules to work correctly than a reputation system.
 In this chapter we will discuss related work on tamper-proof interaction histories in currency or reputation systems.
@@ -22,9 +22,9 @@ There are two projects worth to briefly mention, because of similairity to the T
 These projects are not so thoroughly explained as the block chain
 as they were not used as a starting point in designing MultiChain.
 
-The Tor project is working on a implementation of a reputation system in an effort to incentivize collaboration\cite{dingledine-torincentive}.
-There are currently multiple proposals: PAR\cite{androulaki-torincentive}, BRAIDS\cite{jansen-braid}, LIRA\cite{jansen-lira}, TEARS \cite{jansen-torincentive}, TorCoin\cite{ghosh-torincentive}, and XPAY\cite{chen-torincentive}.
+The Tor project is working on a implementation of a reputation system in an effort to incentivize collaboration~\cite{dingledine-torincentive}.
+There are currently multiple proposals: PAR~\cite{androulaki-torincentive}, BRAIDS~\cite{jansen-braid}, LIRA~\cite{jansen-lira}, TEARS ~\cite{jansen-torincentive}, TorCoin~\cite{ghosh-torincentive}, and XPAY~\cite{chen-torincentive}.
 The amount of proposals demonstrate the complexity of creating a reputation system in an anonymous system.
 
 The InterPlanetary File System \(IPFS\) is a peer-to-peer distributed file system with similairities to the Tribler project.
-IPFS uses an incentivized block exchange to improve collaboration\cite{benet-ipfs}.
+IPFS uses an incentivized block exchange to improve collaboration~\cite{benet-ipfs}.
