--- a/stage0_preliminary/initial_research_possible_theses/blockchain.tex
+++ b/stage0_preliminary/initial_research_possible_theses/blockchain.tex
@@ -31,9 +31,9 @@ This leads to the question if a substantial prototype can be achieved during the
 The threat is that the thesis would only result in a theoretical contribution.
 
 \subsection*{Related work}
-Namecoin is an adaptation of Bitcoin to provide DNS services \cite{Namecoin}.
-Building upon Namecoin, a proposal named Certcoin has be done that provides PKI infrastructure\cite{fromknecht2014certcoin}.
-Further work has been published about a building a decentralized anonymous credential system\cite{garmandecentralized}
+Namecoin is an adaptation of Bitcoin to provide DNS services ~\cite{Namecoin}.
+Building upon Namecoin, a proposal named Certcoin has be done that provides PKI infrastructure~\cite{fromknecht2014certcoin}.
+Further work has been published about a building a decentralized anonymous credential system~\cite{garmandecentralized}
 
 The research in related work only turned up two papers and discussion on internet fora about the subject.
 That gives some leads to potential problems in the solution.
