--- a/stage0_preliminary/initial_research_possible_theses/hsmperformance.tex
+++ b/stage0_preliminary/initial_research_possible_theses/hsmperformance.tex
@@ -34,7 +34,7 @@ Some manufacturers provide simple tables of performance of a single HSM.
 Amazon AWS provides HSM clusters inside a private virtual cluster,
 and refers to these tables as a reference of performance.
 
-A semester project was found by a student of the ETH was found on HSM clusters that included performance testing\cite{hsmperformance}.
+A semester project was found by a student of the ETH was found on HSM clusters that included performance testing~\cite{hsmperformance}.
 This was research done conducted on a new generation of HSM being rolled out inside a large cluster.
 
 On performance research of clusters a vast amount of knowledge can be found.
