--- a/stage0_preliminary/initial_research_possible_theses/keygenerationdistributed.tex
+++ b/stage0_preliminary/initial_research_possible_theses/keygenerationdistributed.tex
@@ -20,7 +20,7 @@ if it is of any interests to solve these problems, and finally how likely it is 
 A possibility is to develop an algorithm for a different key type.
 
 \subsection*{Related work}
-There is a paper proposing an algorithm for RSA keys\cite{boneh1997efficient} where at the end $N=pq$ is known,
+There is a paper proposing an algorithm for RSA keys~\cite{boneh1997efficient} where at the end $N=pq$ is known,
 but no party knows $p$ or $q$. Each party holds a share of the private exponent.
-A similar protocol is proposed for RSA\cite{gilboa1999two}.
+A similar protocol is proposed for RSA~\cite{gilboa1999two}.
 
