--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -13,8 +13,8 @@ In the following sections the limitations imposed by the block chain will be exp
 
 We will only introduce how Bitcoins uses the block chain and why it does so.
 The best starting point for a full explanation of Bitcoins
-is the original paper by Nakamoto\cite{Nakamoto-bitcoin}.
-Further information on Bitcoin can be found on the Bitcoin website\cite{Bitcoin.org-site}.
+is the original paper by Nakamoto~\cite{Nakamoto-bitcoin}.
+Further information on Bitcoin can be found on the Bitcoin website~\cite{Bitcoin.org-site}.
 
 \subsection{Transfer of ownership of a bitcoin}
 The core of the Bitcoin protocol is the block chain.
@@ -88,10 +88,10 @@ The speed of the network is called the hash rate and is the amount of hashes cal
 The amount of zeros balances the probability of branches occuring
 and the time before a new block is found,
 which in turn is how fast transactions are processed.
-The amount of zeros can be seen as the difficulty\cite{bitcoin-difficulty} of finding the a block.
+The amount of zeros can be seen as the difficulty~\cite{bitcoin-difficulty} of finding the a block.
 More zeros decreases the likelyhood a nonce will be valid.
-The estimated hash rate over time can be seen in Figure \ref{fig:hash-speed}\cite{Blockchain.info-hashspeed},
-and the difficulty in Figure \ref{fig:hash-difficulty}\cite{Blockchain.info-difficulty}.
+The estimated hash rate over time can be seen in Figure \ref{fig:hash-speed}~\cite{Blockchain.info-hashspeed},
+and the difficulty in Figure \ref{fig:hash-difficulty}~\cite{Blockchain.info-difficulty}.
 
 \begin{figure}[h]
         \centerline{\includegraphics[scale=0.5]{relatedWork/figs/hashspeed/hashspeed.eps}}
@@ -134,7 +134,7 @@ The size and growth can be seen in Figure \ref{fig:bc-size}.
 
 \begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/blockchainsize/blockchainsize.eps}}
-        \caption{The size of the block chain.\cite{Blockchain.info-bcs}}
+        \caption{The size of the block chain.~\cite{Blockchain.info-bcs}}
 	\label{fig:bc-size}
 \end{figure}
 
@@ -197,13 +197,13 @@ The reverse is true if the time is increased.
 But the time between blocks is a balance between the orphan rate of blocks
 and how fast transactions are committed to the block chain.
 
-These two factors currently result in a theoretical limit of 7 transactions per second\cite{bitcoin-transactions}.
+These two factors currently result in a theoretical limit of 7 transactions per second~\cite{bitcoin-transactions}.
 This can be calculated by dividing the maximum blocksize with the minimal size of a transaction.
 The performance of Bitcoin can be changed by changing the settings of these two factors.
 This limits the global usage of Bitcoins.
 In comparison, Visanet, that handles transactions under Visa,
-is able to process 54.000 transactions per second\cite{visa-transactions}.
+is able to process 54.000 transactions per second~\cite{visa-transactions}.
 To be a real replacement of the current traditional currencies
 a higher number of transactions per second have to be achieved by a digital currency.
-There are at time of writing several competing proposals to increase the block size\cite{garzik-blocksize}\cite{andresen-blocksize}.
+There are at time of writing several competing proposals to increase the block size~\cite{garzik-blocksize,andresen-blocksize}.
 
