--- a/design/entanglement.tex
+++ b/design/entanglement.tex
@@ -17,7 +17,7 @@ Color has been added to denote the direction of the chain of peers.
 
 \begin{figure}[ht]
 	\centerline{\includegraphics[scale=0.3]{design/figs/entangled-chain.eps}}
-	\caption{Entanglement of chains within MultiChain.}
+	\caption{Entanglement of chains within MultiChain with four participants.}
 	\label{fig:chain-example}
 \end{figure}
 
