--- a/design/exchanging_blocks.tex
+++ b/design/exchanging_blocks.tex
@@ -18,7 +18,7 @@ A sequence diagram can be seen in Figure \ref{fig:exchange-new-sequence}.
 	\centerline{\includegraphics[scale=0.3]{design/figs/packet_creation.eps}}
 \label{fig:packet-creation}
 }
-\caption{Exchanging data for block creation.}
+\caption{Exchanging data with our cleaner design in Dispersy.}
 \label{fig:block-creation-new}
 \end{figure}
 
@@ -57,7 +57,7 @@ At this point a new block is created.
 	\centerline{\includegraphics[scale=0.3]{design/figs/signature_old.eps}}
     \label{fig:payload-signature-old}
 }
-\caption{Exchanging data for block creation using existing functionality.}
+\caption{Exchanging data for block creation using the old design in Dispersy.}
 \label{fig:block-creation-old}
 \end{figure}
 Within Dispersy functionality was already build to create a message, sign the message
