--- a/design/integration.tex
+++ b/design/integration.tex
@@ -5,7 +5,7 @@ The scheduler tracks session upload and download amounts and schedules a block t
 when the amount of uploaded bytes is above a certain threshold.
 The scheduler currently only tracks traffic of anonymous downloads.
 Bartercast is not yet removed and
-currently MultiChain runs together with Bartercast untill MultiChain fully replaces Bartercast.
+currently MultiChain runs together with Bartercast until MultiChain fully replaces Bartercast.
 
 We recommend that the scheduler should be expanded to schedule blocks in a more sophisticated way.
 The functionality of the scheduler is very limited and is missing basic functionality.
