--- a/design/signatures.tex
+++ b/design/signatures.tex
@@ -19,7 +19,7 @@ These amounts can be verified using the chain of peer B.
 The parts of what is signed by peer A and what is signed by B can be seen in Figure \ref{fig:signatures}.
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{design/figs/signatures.eps}}
-	\caption{Signatures on the payload.}
+	\caption{Fields protected by each of the two signatures.}
 	\label{fig:signatures}
 \end{figure}
 
