Pouwelse revisions: relatedwork

--- a/relatedWork/bartercast.tex
+++ b/relatedWork/bartercast.tex
@@ -109,7 +109,7 @@ BarterCasts knows which entries are relevant by keeping track of the last synchr
 and only using new barter records since that point.
 
 \subsection{Limitation}
-The main limitation of Bartercast is that the reputation is self reported.
+The main limitation of Bartercast is that the reputation is self-reported.
 This assumes the majority of nodes to be honest and to follow protocol.
 Barter records are not signed by any one else.
 So Barter records can be created by any malicious node without a limit.
