--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -134,7 +134,7 @@ The size and growth can be seen in Figure \ref{fig:bc-size}.
 
 \begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/blockchainsize/blockchainsize.eps}}
-        \caption{The size of the block chain.~\cite{Blockchain.info-bcs}}
+        \caption{The size of the block chain~\cite{Blockchain.info-bcs}.}
 	\label{fig:bc-size}
 \end{figure}
 
